--- a/project1/assets/style.css
+++ b/project1/assets/style.css
@@ -2,15 +2,21 @@
 
 body {
     font-family: 'Comic Sans MS', cursive, sans-serif;
-    background: linear-gradient(to right, 
-    #ff7e5f, /* Soft pink */
-    #feb47b, /* Light orange */
-    #ff9a9e, /* Light coral */
-    #fbc2eb, /* Soft pink */
-    #a0c4ff, /* Light blue */
-    #b9fbc0  /* Light green */
-    
-);
+    background: linear-gradient(to right,
+            #ff7e5f,
+            /* Soft pink */
+            #feb47b,
+            /* Light orange */
+            #ff9a9e,
+            /* Light coral */
+            #fbc2eb,
+            /* Soft pink */
+            #a0c4ff,
+            /* Light blue */
+            #b9fbc0
+            /* Light green */
+
+        );
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -57,9 +63,7 @@ select:hover {
     transform: scale(1.05);
 }
 
-.converter {
-    border-top: 10px;
-}
+
 
 select[id="dropdown"] {
     display: block;
@@ -146,25 +150,79 @@ footer {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
 }
-/* adding media screen miguelgallery */
-@media screen and (min-width: 768px) {
-div#wrapper {
-    display: block;
-    justify-content: flex-start;
-    unicode-bidi: isolate;
-    box-sizing: border-box;
-    margin: 2px auto;
-    padding: 0;
-    border: 2px solid #ffffff;
-    border-top: none;
-    border-bottom: none;
-    max-width: 1200px;
-    max-height: 100%;
+
+/*thermometer css info -amanda*/
+
+#thermometerWrapper {
+    position: relative;
+    top: 285px;
+    right: 130px;
+    width: 70px;
+    /* height: 300px; */
 }
 
-footer {
-    padding-bottom: 10px;
+#thermometerClipart {
+    mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 99.9%, rgba(0, 0, 0, 0) 100%);
+    width: 100%;
+    height: auto;
 }
+
+#mercuryLevel {
+    position: absolute;
+    bottom: 5px;
+    /* Position above the bulb */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 35px;
+    height: 0;
+    /* Start at 0 */
+    background-color: red;
+    border-radius: 20px;
+    transition: height 1s ease-out;
+
+}
+
+/* adding media screen miguelgallery */
+@media screen and (min-width: 768px) {
+
+    #mercuryLevel {
+        position: absolute;
+        /* transform: scaleY(3);  */
+        /* transform-origin: top bottom; */
+        /* left: 33%; */
+        bottom: 13px;
+        width: 90px;
+    }
+    #thermometerWrapper {
+        display: static;
+        top: auto;
+        right: auto;
+        width: 275px;
+        /* height: 300px; */
+    }
+    aside {
+        grid-area: aside;
+        text-align: center;
+        padding: 20px;
+    }
+
+    div#wrapper {
+        display: block;
+        justify-content: flex-start;
+        unicode-bidi: isolate;
+        box-sizing: border-box;
+        margin: 2px auto;
+        padding: 0;
+        border: 2px solid #ffffff;
+        border-top: none;
+        border-bottom: none;
+        max-width: 1200px;
+        max-height: 100%;
+    }
+
+    footer {
+        padding-bottom: 10px;
+    }
 
     select[id="dropdown"] {
         display: block;
@@ -178,6 +236,7 @@ footer {
         text-align: left;
         font-size: 1rem;
     }
+
     input {
         display: block;
         justify-content: flex-start;
@@ -192,22 +251,90 @@ footer {
     }
 
     #answer {
-        width: 64%;  
-        height: 15px;  
+        width: 78%;
+        height: 15px;
     }
 
     #inputText {
-        width: 64%;
-        height: 15px;  
+        width: 78%;
+        height: 15px;
     }
-  }
-  
-  label {
-    margin-left: 15px;
-  }
+}
 
-  /* Large smartphones - navbar changes color */ */
-  /* @media screen and (max-width: 992px) {
+label {
+    margin-left: 15px;
+}
+
+
+
+@media screen and (max-width: 390px) {
+    #thermometerWrapper {
+        position: relative;
+        top: 275px;
+        right: 130px;
+        height: 300px;
+    }
+    select[id="dropdown"] {
+        display: block;
+        justify-content: flex-start;
+        /* width: 300px; */
+        margin: 1px 0 7px 0;
+        margin-left: 10px;
+        border: 2px solid #ff6347;
+        border-radius: 8px;
+        text-align: left;
+        font-size: 1rem;
+    }
+
+    input {
+        display: block;
+        justify-content: flex-start;
+        width: 40%;
+        height: 25px;
+        padding: 6px;
+        margin-bottom: 0px;
+        border: 2px solid #ff6347;
+        border-radius: 8px;
+        text-align: left;
+        font-size: 1rem;
+    }
+
+    section {
+        grid-area: section;
+        height: 500px;
+        width: 325px;
+        background: #fff;
+        border: 2px solid #ff6347;
+        border-radius: 12px;
+        padding-top: 20px;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+    }
+
+    #answer {
+        width: 283px;
+        height: 15px;
+        margin-top: 1px;
+        margin-bottom: 5px;
+    }
+
+    #inputText {
+        width: 283px;
+        height: 15px;
+        margin-top: 1px;
+    }
+
+    .converter {
+        display: block;
+        /* padding-top: 7px; */
+        /* border-top: 10px; */
+    }
+
+}
+
+
+/* Large smartphones - navbar changes color */
+/* @media screen and (max-width: 992px) {
     body {
         margin: 0 10%;
         border: 2px solid #ff6347;
@@ -235,10 +362,10 @@ footer {
 
     /* #answer {
         width: 60%;  /* Adjust width here */
-        /* height: 20px;   */
-    /* } */
+/* height: 20px;   */
+/* } */
 
-    /* #inputText { */
-        /* width: 60%; */
-        /* height: 20px;   */
-    /* }
+/* #inputText { */
+/* width: 60%; */
+/* height: 20px;   */
+/* }
